change package name and other

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="description" content="Toko online" />
+    <meta name="description" content="Blog, blog" />
     <meta name="author" content="wadahkode" />
-    <title>Simpel toko online</title>
-    <link rel="stylesheet" href="./css/simpel-toko-online.css" />
+    <title>My blog</title>
   </head>
-  <body class="bg-gray-200">
+  <body>
     <div id="root"></div>
     <script src="./js/blog.min.js"></script>
     <script src="./js/bundle.min.js"></script>
