playground javascript on template

--- a/resources/pages/admin.html
+++ b/resources/pages/admin.html
@@ -1,1 +1,7 @@
-<div class="bg-white w-50 p-4 mt-36 mx-auto">Administrator</div>
+<h1>Hello world</h1>
+
+<script>
+  let heading = document.querySelector("h1");
+
+  console.log((heading.style.color = "red"));
+</script>
