--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript></noscript>
     <script src="./js/blog.min.js"></script>
     <script src="./js/bundle.min.js"></script>
   </body>
