--- a/resources/pages/admin.html
+++ b/resources/pages/admin.html
@@ -1,7 +1,7 @@
-<h1>Hello world</h1>
+<h1>Hello world!</h1>
 
 <script>
   let heading = document.querySelector("h1");
 
-  console.log((heading.style.color = "red"));
+  console.log((heading.style.color = "blue"));
 </script>
