--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>My blog</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Hello world</div>
     <noscript></noscript>
     <script src="./js/blog.min.js"></script>
     <script src="./js/bundle.min.js"></script>
