--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    {{content}}
+    <div id="root">{{content}}</div>
   </body>
 </html>
